--- a/css/index.css
+++ b/css/index.css
@@ -70,10 +70,113 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 
 @media (max-width: 800px) {
-    .container header nav {
+    .header {
+        flex-direction: column-reverse;
+        margin: 20px 0;
+        height: 100%;
+    }
+
+    .header .navigation {
+        width: 100%;
+        margin: 0;
+    }
+
+    .header .navigation a {
+        margin-left: 25px;
+    }
+
+    .header .logo {
+        margin: auto;
+    }
+
+
+    .logo1 {
+        visibility: hidden;
+    }
+
+    .logo-con .moto {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        margin-left: 27%;
+        font-size: 60px;
+        justify-items: center;
+        align-content: center;
+    }
+
+    .logo-con .gsbutton {
+        margin-left: 44%;
+    }
+
+    .logo-con {
+        height: 10%;
+    }
+
+    .body-page p {
+        font-size: 20px;
+    }
+
+    .contact heading {
+        font-size: 30px;
+        margin-left: 20px;
+        font-weight: bold;
+    }
+
+    .information {
+        width: 800px;
+    }
+
+    .information h2 {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .information p {
+        font-size: 20px;
+    }
+
+}
+
+@media (max-width: 500px) {
+    .header .logo {
+       margin-left: 30%;
+    }
+
+    .logo-con .moto {
+        font-size: 60px;
+        margin-right: 50%;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .body-page {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .header {
+        height: 100%;
+    }
+
+    .header .navigation {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    .header .navigation a {
+        border-bottom: 1px solid black;
+        padding: 5% 100%;
+        margin: 0;
+    }
+
+    .logo-con .moto {
+        margin-left: 5%;
+    }
+
+    .logo-con .gsbutton {
+        margin-left: 20%;
     }
 }
 
@@ -82,12 +185,24 @@ h1, h2, h3, h4, h5 {
     font-size: 20px;
     padding: 10px;
     margin: 15px;
+    margin-left: 15%;
     text-decoration: none;
     border-color: teal;
     top: 50px;
     display: inline-block;
     color: lightblue;
     transition: all 0.15s;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header .navigation {
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -105,13 +220,13 @@ a:active {
 }
 
 .gsbutton {
-    top: 150px;
-    right: 27%;
-    position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     padding: 0.46em 1.6em;
     border: 0.1em solid #000000;
-    margin: 5px;
+    margin: 0 auto;
+    margin-left: 69%;
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
@@ -141,16 +256,14 @@ a:active {
 .container .logo {
     padding: 20px;
     display: inline-block;
-    margin-left: 43%;
     
 }
 
 .logo-con {
+    display: inline-block;
     font-size: 100px;
-    width: 900px;
-    margin: auto;
-
-    
+    width: 800px;
+    height: 200px;
 }
 .line {
     width: 95%;
@@ -163,22 +276,21 @@ a:active {
 
 
 .logo-con .moto {
-    text-align: justify;
-    top: 120px;
-    position: relative;
     display: inline-block;
     height: 10px;
-    width: 20px;
     padding-top: 20px;
-    text-align: left;
-    margin-right: 30%;
+    text-align: center;
     font-weight: bold;
     font-family: 'Courier New', sans-serif;
 }
 
+.logo-con .moto h1 {
+    text-align: center;
+}
+
 .logo1 {
    
-   margin-left: 50%;
+   margin-left: 100%;
    display: inline-block;
    position: relative;
    bottom: 200px;
@@ -197,24 +309,11 @@ a:active {
     
 }
 
-.information heading {
-    font-size: 25px;
-    font-family: 'Courier New',sans-serif;
-    font-weight: bold;
-}
-
-
-
 .copywrite {
     text-align: center;
     margin-bottom: 40px;
 }
 
-.contact heading {
-    font-weight: bold;
-    font-size: 20px;
-    margin: 20px;
-}
 
 .contact p {
     margin: 5px;
