--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,10 @@ h1, h2, h3, h4, h5 {
         margin-bottom: 10px;
     }
 
+    .navigation .border-top {
+        border-top: 1px solid black;
+    }
+
     .header .navigation a {
         border-bottom: 1px solid black;
         padding: 5% 100%;
@@ -178,6 +182,43 @@ h1, h2, h3, h4, h5 {
     .logo-con .gsbutton {
         margin-left: 20%;
     }
+
+    .information {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        
+    }
+
+    .information .middle-img {
+        width: 50%;
+        margin: 0;
+        margin-top: 30px;
+        margin-right: 20%;
+    }
+
+    .information h2 {
+        margin-bottom: 20px;
+        margin-top: 50px;
+    }
+    
+    .information .p1 {
+        width: 200%;
+    }
+
+    .information .p2 {
+        width: 200%;
+    }
+
+    .information p {
+        width: 350%;
+    }
+
+    .copywrite {
+        margin-top: 40px;
+    }
+
+
 }
 
 
@@ -304,8 +345,7 @@ a:active {
 
 .information .middle-img {
     display: block;
-    margin: 20px;
-    width: 97%;
+    width: 90%;
     
 }
 
