--- a/css/index.css
+++ b/css/index.css
@@ -6,48 +6,135 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -55,16 +142,21 @@ table {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
-    font-family: 'Courier New', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Courier', cursive;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Bangers', cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
-  
+
 }
 
 /* Your code starts here! */
@@ -91,7 +183,7 @@ h1, h2, h3, h4, h5 {
 
 
     .logo1 {
-        visibility: hidden;
+        display: none;
     }
 
     .logo-con .moto {
@@ -138,7 +230,7 @@ h1, h2, h3, h4, h5 {
 
 @media (max-width: 500px) {
     .header .logo {
-       margin-left: 30%;
+        margin-left: 30%;
     }
 
     .logo-con .moto {
@@ -187,7 +279,7 @@ h1, h2, h3, h4, h5 {
         display: flex;
         flex-direction: column;
         width: 90%;
-        
+
     }
 
     .information .middle-img {
@@ -201,7 +293,7 @@ h1, h2, h3, h4, h5 {
         margin-bottom: 20px;
         margin-top: 50px;
     }
-    
+
     .information .p1 {
         width: 200%;
     }
@@ -221,16 +313,19 @@ h1, h2, h3, h4, h5 {
 
 }
 
+body {
+    width: 880px;
+    margin: 0 auto;
+}
 
-.container a {
+
+.header .navigation a {
     font-size: 20px;
     padding: 10px;
-    margin: 15px;
-    margin-left: 15%;
+    margin: 0 10px;
     text-decoration: none;
     border-color: teal;
-    top: 50px;
-    display: inline-block;
+    display: flex;
     color: lightblue;
     transition: all 0.15s;
 }
@@ -247,17 +342,15 @@ h1, h2, h3, h4, h5 {
 }
 
 
-    a:hover {
-        background-color: darkcyan;
-        text-shadow: 0 0 2em rgba(255,255,255,1);
-        border-color: #FFFFFF;
-        
-        
-    }
-
-a:active {
+.header .navigation a:hover {
     background-color: darkcyan;
-    color: aqua; 
+    text-shadow: 0 0 2em rgba(255, 255, 255, 1);
+    border-color: #FFFFFF;
+}
+
+.header .nav a:active {
+    background-color: darkcyan;
+    color: aqua;
 }
 
 .gsbutton {
@@ -267,86 +360,65 @@ a:active {
     padding: 0.46em 1.6em;
     border: 0.1em solid #000000;
     margin: 0 auto;
-    margin-left: 69%;
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Courier New',sans-serif;
     font-weight: 300;
     color: #000000;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     background-color: #FFFFFF;
     text-align: center;
     transition: all 0.15s;
-    
+
 }
 
 .gsbutton:hover {
-    text-shadow: 0 0 2em rgba(255,255,255,1);
+    text-shadow: 0 0 2em rgba(255, 255, 255, 1);
     color: Highlight;
     border-color: #FFFFFF;
 }
 
 @media all and (max-width:30em) {
-.gsbutton {
-    display: inline-block;
-    margin: 0.4em auto;
-}
+    .gsbutton {
+        display: inline-block;
+        margin: 0.4em auto;
+    }
 }
 
 .container .logo {
     padding: 20px;
-    display: inline-block;
-    
+
+}
+
+.logo-con .moto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 100px;
+    text-align: center;
 }
 
 .logo-con {
-    display: inline-block;
-    font-size: 100px;
-    width: 800px;
-    height: 200px;
-}
-.line {
-    width: 95%;
-    height: 20px;
-    border-bottom: 1px solid black;
-    position: relative;
-    margin: auto;
-    margin-bottom: 20px;
-}
-
-
-.logo-con .moto {
-    display: inline-block;
-    height: 10px;
-    padding-top: 20px;
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Courier New', sans-serif;
-}
-
-.logo-con .moto h1 {
-    text-align: center;
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .logo1 {
-   
-   margin-left: 100%;
-   display: inline-block;
-   position: relative;
-   bottom: 200px;
-   left: 150px;
+    width: 300px;
+    height: 300px;
 }
 
 .information {
     margin: 30px;
-    
+    border-top: 1px solid black;
+    padding-top: 20px;
+
 }
 
 .information .middle-img {
-    display: block;
-    width: 90%;
-    
+    width: 100%;
+    margin: 15px 0;
 }
 
 .copywrite {
@@ -354,47 +426,32 @@ a:active {
     margin-bottom: 40px;
 }
 
+.contact {
+    border-top: 1px solid black;
+    margin: 0 20px;
+}
+
+.contact h2 {
+    margin-top: 20px;
+}
 
 .contact p {
-    margin: 5px;
-    margin-left: 20px;
+    margin-bottom: 10px;
 }
+
 
 .features {
     display: inline-block;
-    width: 49%;
+    width: 49.5%;
 }
 
 .about {
     display: inline-block;
-    width: 49%;
+    width: 49.5%;
 }
 
-.services {
-    display: inline-block;
-    width: 30%;
+.spv {
+    display: flex;
+    flex-direction: row;
+    margin-right: 10px;
 }
-
-.product {
-    display: inline-block;
-    width: 30%;
-}
-
-.vision {
-    display: inline-block;
-    width: 30%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
