--- a/css/index.css
+++ b/css/index.css
@@ -161,157 +161,6 @@ h5 {
 
 /* Your code starts here! */
 
-@media (max-width: 800px) {
-    .header {
-        flex-direction: column-reverse;
-        margin: 20px 0;
-        height: 100%;
-    }
-
-    .header .navigation {
-        width: 100%;
-        margin: 0;
-    }
-
-    .header .navigation a {
-        margin-left: 25px;
-    }
-
-    .header .logo {
-        margin: auto;
-    }
-
-
-    .logo1 {
-        display: none;
-    }
-
-    .logo-con .moto {
-        display: flex;
-        flex-direction: column;
-        margin-left: 27%;
-        font-size: 60px;
-        justify-items: center;
-        align-content: center;
-    }
-
-    .logo-con .gsbutton {
-        margin-left: 44%;
-    }
-
-    .logo-con {
-        height: 10%;
-    }
-
-    .body-page p {
-        font-size: 20px;
-    }
-
-    .contact heading {
-        font-size: 30px;
-        margin-left: 20px;
-        font-weight: bold;
-    }
-
-    .information {
-        width: 800px;
-    }
-
-    .information h2 {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .information p {
-        font-size: 20px;
-    }
-
-}
-
-@media (max-width: 500px) {
-    .header .logo {
-        margin-left: 30%;
-    }
-
-    .logo-con .moto {
-        font-size: 60px;
-        margin-right: 50%;
-    }
-
-    .container {
-        width: 100%;
-    }
-
-    .body-page {
-        width: 90%;
-        margin: 0 auto;
-    }
-
-    .header {
-        height: 100%;
-    }
-
-    .header .navigation {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-
-    .navigation .border-top {
-        border-top: 1px solid black;
-    }
-
-    .header .navigation a {
-        border-bottom: 1px solid black;
-        padding: 5% 100%;
-        margin: 0;
-    }
-
-    .logo-con .moto {
-        margin-left: 5%;
-    }
-
-    .logo-con .gsbutton {
-        margin-left: 20%;
-    }
-
-    .information {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-
-    }
-
-    .information .middle-img {
-        width: 50%;
-        margin: 0;
-        margin-top: 30px;
-        margin-right: 20%;
-    }
-
-    .information h2 {
-        margin-bottom: 20px;
-        margin-top: 50px;
-    }
-
-    .information .p1 {
-        width: 200%;
-    }
-
-    .information .p2 {
-        width: 200%;
-    }
-
-    .information p {
-        width: 350%;
-    }
-
-    .copywrite {
-        margin-top: 40px;
-    }
-
-
-}
 
 body {
     width: 880px;
@@ -428,7 +277,6 @@ body {
 
 .contact {
     border-top: 1px solid black;
-    margin: 0 20px;
 }
 
 .contact h2 {
@@ -454,4 +302,167 @@ body {
     display: flex;
     flex-direction: row;
     margin-right: 10px;
+}
+
+
+/* @media Queries 800px*/
+
+@media (max-width: 800px) {
+    .header {
+        flex-direction: column-reverse;
+        height: 100%;
+    }
+
+    .header .navigation {
+        width: 85%;
+    }
+
+    .header .navigation a {
+        margin: 0;
+    }
+
+    .header .logo {
+        margin: auto;
+    }
+
+
+    .logo1 {
+        display: none;
+    }
+
+    .logo-con .moto {
+        margin-top: 30px;
+        justify-items: center;
+    }
+
+    .logo-con .gsbutton {
+        width: 45%;
+        font-size: 15px;
+    }
+
+    .logo-con {
+        height: 10%;
+    }
+
+    .body-page p {
+        font-size: 20px;
+    }
+
+    .information .p1 {
+        margin-right: 10px;
+    }
+
+    .information h2 {
+        font-size: 20px;
+    }
+
+    .spv p {
+        margin-right: 15px;
+    }
+
+}
+
+/* @media Queries 500px */
+
+@media (max-width: 500px) {
+
+    body{
+        width: 500px;
+    }
+
+    .container {
+        margin: 0 auto;
+    }
+
+    .header .logo {
+        justify-content: center;
+
+    }
+
+    .logo-con .moto {
+        font-size: 60px;
+        justify-content: center;
+    }
+
+    .container {
+        width: 500px;
+    }
+
+    .body-page {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+
+    .header .navigation {
+        border-top: 1px solid black;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .navigation a {
+        width: 100%;
+        justify-content: center;
+    }
+
+
+    .header .navigation a {
+        display: flex;
+        border-bottom: 1px solid black;
+        padding: 20px;
+        justify-content: center;
+    }
+
+    .logo-con .moto {
+        margin-left: 5%;
+    }
+
+    .logo-con .gsbutton {
+        padding: 10px;
+    }
+
+    .information {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+    }
+
+    .information .middle-img {
+        width: 95%;
+        margin: 0;
+        margin-top: 30px;
+    }
+
+    .spv {
+        flex-direction: column;
+    }
+
+    .information h2 {
+        margin-bottom: 20px;
+        margin-top: 50px;
+    }
+
+    .information .p1 {
+        width: 200%;
+    }
+
+    .information .p2 {
+        width: 200%;
+    }
+
+    .information p {
+        width: 100%;
+    }
+
+    .contact {
+        margin-left: 30px;
+    }
+
+    .copywrite {
+        margin-top: 40px;
+    }
+
+
 }
